--- a/RadioButtonone/app/src/main/res/values/strings.xml
+++ b/RadioButtonone/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">RadioButtonone</string>
+    <string name="app_name">BuyTickets2024</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="regularticket">Regular Ticket</string>
+    <string name="childticket">Children Ticket</string>
+    <string name="studentticket">Student Ticket</string>
+    <string name="confirm">Confirm</string>2
+    <string name="numberOfTickets">Count：</string>
+    <string name="ticketTYpe">Ticket Type：</string>
+    <string name="gender">Gender：</string>
+    <string name="total">Total：</string>
 </resources>
